# define

./: .cursorrules  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  computer.def  concepts.md  core.def  cspell.json  helloworld.def  language-proposals.md  philosophy.md  pong.def  principles.md  pyproject.toml  requirements.md  space.def  spec.md  style.md
.claude/: settings.json
.cursor/: cli.json
bank_example/: bank.def
compiler/: __init__.py  ast.py  ast_test.py  grammar.lark  grammar_test.py  indenter.py  parser.py  parser_test.py  transformer.py  transformer_test.py
examples/: Program.def  all_syntax.def  core.def  helloworld.def  program.def
proposals/: 00000-language-proposals.md  00001-types-of-names.md  00002-universes.md  00003-authorities.md  00003-universe-authorities.md  00004-multiverses.md  00005-global-names-local-names-and-scopes.md  00005-name-formats-scoping-and-file-layouts.md  00006-project-roots.md  00007-global-names-match-filesystem-layouts.md  00008-files-are-loaded-by-reference.md  00009-global-name-circular-dependencies-are-forbidden.md  00010-configuration-directory.md  00011-comments.md  00012-definitions-in-the-universe-of-reflection.md  00013-creating-dimension-points.md  00014-assigning-qualities.md  00015-local-name-scope-syntax.md  00016-statement-terminators.md  00017-moving-dimension-points.md  00018-modular-constraints.md  00019-guaranteeing-qualities-in-positions.md  00020-atomic-creation.md  00021-defining-machines.md  00022-defining-qualities.md  X-defining-constraints-on-positions.md
spec/: concepts.md  (+2 more)
(+14 files in other folders)
